# lines

./: .gitignore  program.md  pyproject.toml
configs/: v1_tiny2d.yaml
docs/: 3d-roadmap.md  a2-prototype-scope.md  a3-gpu-handoff.md  a3-porting-scope.md  baseline-reference.md  best-config.md  results.md  sim-to-real.md
lines/: __init__.py  primitives.py
lines/baselines/: __init__.py  classical.py
notebooks/: README.md  colab_train_box.ipynb
scripts/: _build_colab_notebook.py  a2_overfit_bench.py  build_box_data.py  build_cylinder_data.py  build_layout_probe.py  build_mixed_3d_data.py  build_mixed_train.py  build_probe.py  build_technical_probe.py  eval_generalization.py  eval_model.py  preview_predictions.py  update_results.py
tests/: test_autoregressive.py  test_beam_search.py  test_box_scene.py  test_classical.py  test_cylinder_scene.py  test_dataset.py  test_device_agnostic.py  test_diffvg_refine.py  test_ellipse_primitive.py  test_encoder_compat.py  test_encoding.py  test_exact_match_rate.py  test_f1_metric.py  test_framing_jitter.py  test_harness.py  test_heldout2_layout.py  test_heldout_layout.py  test_matcher.py  test_metrics.py  test_per_class_metrics.py  test_predictor.py  test_primitives.py  test_probe_render.py  test_projection.py  test_realityprobe.py  test_render.py  test_render_ellipse.py  test_sampler2d.py  test_seq_tokenizer.py  test_seq_tokenizer_ellipse.py  test_set_predictor.py  test_structure_postprocess.py  test_technical_layout.py  test_train.py  test_train_autoregressive.py  test_warm_start.py  test_warm_start_train.py
(+37 files in other folders)
