[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lines"
version = "0.1.0"
description = "Synthetic-trained extraction of geometric primitives from raster renders"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["lines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
